--- a/frontend/src/app/components/video/video.component.html
+++ b/frontend/src/app/components/video/video.component.html
@@ -1,6 +1,7 @@
-<p>video works!</p>
-{{filename}}
-{{extension}}
-<video id="videoPlayer" width="50%" controls autoplay >
-    <source [src]="config.baseUrl + '/videos/'+filename" [type]="'video/'+extension"/>
-</video>
+<h1 class="mb-4">{{visibleFileName}}</h1>
+<div class="ratio ratio-16x9">
+    <video id="videoPlayer" class="rounded shadow-lg" controls>
+        <source [src]="config.baseUrl + '/videos/'+filename" [type]="'video/'+extension"/>
+        Your browser does not support the video tag.
+    </video>
+</div>
