--- a/mobile/Stream/Views/MainView.xaml
+++ b/mobile/Stream/Views/MainView.xaml
@@ -8,16 +8,19 @@
         <viewmodels:MainViewModel/>
     </ContentPage.BindingContext>
     <VerticalStackLayout>
-        <Button Command="{Binding ShowVideos}"/>
+        <Button Command="{Binding ShowVideos}" Text="Listázás"/>
         <CollectionView ItemsSource="{Binding Videos}">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Frame HasShadow="True" CornerRadius="10" Padding="10" BorderColor="Gray">
                         <StackLayout Orientation="Vertical" HorizontalOptions="Center">
-                            <Image Source="{Binding Thumbnail}" HeightRequest="150" WidthRequest="100" Aspect="AspectFill"/>
-                            <Label Text="{Binding Title}" FontSize="16" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
-                            <Button Text="Megnézem" Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}},
-                                    Path=BindingContext.NavigateToStreamPage }" CommandParameter="{Binding Filename}" HorizontalOptions="Center"/>
+                            <!--<Frame HeightRequest="90" WidthRequest="150">
+                                <Image Source="http://192.168.0.129/public/thumbnails/2021-12-29-1017-55_thumb.jpg"  Aspect="AspectFill"/>
+                                
+                            </Frame>-->
+                            <Label Text="{Binding Filename}" FontSize="20" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
+                            <Button Text="Megnézem!" Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}},
+                                    Path=BindingContext.NavigateToStreamPage }" CommandParameter="{Binding Filename}" HorizontalOptions="Center" WidthRequest="100"/>
                         </StackLayout>
                     </Frame>
                 </DataTemplate>
